force-app/main/default/objects/Order_Line_Item__c/Order_Line_Item__c.object-meta.xml
<CustomObject>
    <description>This is a Custom Object which is a child of Order Object and will store the information about the Items to be included in order.</description>
    <label>Order Line Item</label>
    <nameField>
        <displayFormat>odl-{0000000}</displayFormat>
        <label>Order Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>