force-app/main/default/objects/Order_Line_Item__c/fields/Include_In_The_Order__c.field-meta.xml
<CustomField>
    <fullName>Include_In_The_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In The Order</label>
    <type>Checkbox</type>
</CustomField>