force-app/main/default/objects/Order_Line_Item__c/fields/ListPrice__c.field-meta.xml
<CustomField>
    <fullName>ListPrice__c</fullName>
    <inlineHelpText>The List price of the item</inlineHelpText>
    <label>List Price</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>