force-app/main/default/objects/Order_Line_Item__c/fields/Order_Cust__c.field-meta.xml
<CustomField>
    <fullName>Order_Cust__c</fullName>
    <label>Order Cust</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>