force-app/main/default/objects/Order_Line_Item__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <inlineHelpText>The actual price of the item.</inlineHelpText>
    <label>Unit Price</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>