force-app/main/default/objects/Order_Line_Item__c/validationRules/Product_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Product__c )</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>it is required to have Product</errorMessage>
</ValidationRule>