force-app/main/default/objects/Order_Line_Item__c/validationRules/Quantity_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Required</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c    &lt;=  0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity always more than 0</errorMessage>
</ValidationRule>